# mint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HANDOVER-phase16-ready.md  HANDOVER-phase17-ready.md  README.md  docker-compose.yml  e2e_qa_best_of.py  e2e_qa_loop.py  e2e_qa_strict.py  e2e_qa_structural.py  e2e_qa_visual.py  e2e_showcase.py  e2e_showcase_guide.py  e2e_sidecar_report.py  e2e_sidecar_report_claret.py  output.pptx  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
config/: default-tokens.json
docs/: SESSION_HANDOFF_2026-05-09.md  cross-model-handoff-smoke.md  development-plan.xml  docx_showcase_guide.md  knowledge-graph.xml  mcp-audit.md  memo-poc-smoke.md  mint-pure-python-handover-v1.md  requirements.xml  smoke_test_v3_claude_desktop.md  smoke_test_v4_claude_desktop.md  style-preset-schema.md  technology.xml  verification-plan.xml
docs/archive/: HANDOVER-phase15-ready.md  MINT_Concept_v5.md  pure-python-handover-v1.md
docs/pure-python/: README.md  acceptance-criteria.md  feature-flag.md  handover-v1.md  structure.md
docs/reference/: anthropic_claude_baseline.docx  openai_mint_article.docx  openai_showcase_guide.docx  qa_evolution_v2.md
e2e_prompts/: showcase_prompt.txt
experiments/2026-05-10-alpha-baseline/: README.md  REPORT_COMPARISON.md  baseline_report.docx  matrix.md  ~$seline_report.docx
experiments/2026-05-10-alpha-baseline/round-1/: 04_light_gemma3_4b.docx  05_light_gemma4_e2b.docx  06_light_qwen3_5.docx  07_baseline_qwen3_5_35b.md  08_baseline_gemma3_4b.md  REPORT.md  results.json
experiments/2026-05-10-alpha-baseline/round-2/: 01_heavy_gemma4_31b.docx  02_heavy_glm_4_7_flash.docx  04_light_gemma3_4b.docx  05_light_gemma4_e2b.docx  06_light_qwen3_5.docx  07_baseline_qwen3_5_35b.md  08_baseline_gemma3_4b.md  REPORT.md  results.json
experiments/2026-05-10-alpha-baseline/round-3-postfix/: 01_heavy_gemma4_31b.docx  04_light_gemma3_4b.docx  06_light_qwen3_5.docx  07_baseline_qwen3_5_35b.md  08_baseline_gemma3_4b.md  REPORT.md  results.json
experiments/2026-05-10-alpha-baseline/source/: article-draft.md
rules/: d-hard.yaml  d-soft.yaml  p-hard.yaml
skills/frontier/: docx.md  pptx.md
skills/medium/: docx.md  pptx.md
skills/small/: docx.md  pptx.md
src/mint/: __init__.py  _security.py  _xml_ns.py  assemble.py  cli.py  config.py  create.py  edit.py  extract.py  fingerprint.py  fix.py  llm.py  mcp_g1.py  mcp_g2.py  ooxml.py  paths.py  plan.py  section.py  theme.py  theme_extract.py  validate.py
src/mint_python/: __init__.py  _hash.py  edit.py  extract.py  fingerprint.py  fix.py  ooxml.py  validate.py
templates/: contract.yaml  decision-record.yaml  letter.yaml  memo.yaml  nda-bilingual-ru-en.yaml  report.yaml  technical-spec.yaml
templates/builtin/: business-memo.docx
tests/_helpers/: __init__.py  fake_mcp_context.py  fake_vlm.py  ooxml_parity.py  sample_docs.py
tests/fixtures/: _generate_edit_fixtures.py  _generate_ooxml_fixtures.py  bad_column_widths.docx  bad_font.pptx  create_grace_fixtures.py  hello_world_docx.js  hello_world_pptx.js  malicious_fs.js  malicious_net.js  minimal_valid.docx  minimal_valid.pptx  mp_chart_e2e_baseline.json  mp_e2e_baseline.json  mp_showcase_baseline.json  percentage_width.docx  raw_newline.docx  syntax_error.js  with_comment_replies.docx  with_comments.docx  with_dangling_rel.docx  with_durable_id_overflow.docx  with_grace.docx  with_quote_chars.docx  with_revisions.docx  with_vendor_xml.docx
tests/integration/: conftest.py  test_cli.py  test_create.py  test_klawd_showcase.py  test_mcp_g1.py  test_mcp_g2.py  test_mp_audit_extend.py  test_mp_auth_shim.py  test_mp_chart_e2e.py  test_mp_doc_bundle.py  test_mp_doc_generic.py  test_mp_doc_personal_guard.py  test_mp_doc_picker.py  test_mp_doc_tech_spec.py  test_mp_e2e.py  test_mp_manifest_read.py  test_mp_mcp_edit.py  test_mp_mcp_extract.py  test_mp_mcp_fingerprint.py  test_mp_mcp_fix.py  test_mp_mcp_resources.py  test_mp_mcp_resources_versioned.py  test_mp_mcp_validate.py  test_mp_memo_poc.py  test_mp_showcase_e2e.py  test_mp_templates_registry.py  test_mp_templates_write.py  test_mp_theme_edit.py  test_mp_validate_fix_e2e.py  test_mp_visual_qa_hook.py
tests/unit/: _mp_helpers.py  conftest.py  test_article_experiment.py  test_assemble.py  test_config.py  test_edit.py  test_engine_flag.py  test_extract.py  test_fingerprint.py  test_fix.py  test_legacy_deprecation.py  test_mcp_resources_unit.py  test_mint_telemetry.py  test_mp_callout.py  test_mp_chart.py  test_mp_content.py  test_mp_coverage_gaps.py  test_mp_document.py  test_mp_edit.py  test_mp_extract.py  test_mp_fingerprint.py  test_mp_fix.py  test_mp_grace.py  test_mp_list.py  test_mp_md_adapter.py  test_mp_ooxml.py  test_mp_phase9_coverage_gaps.py  test_mp_rules.py  test_mp_sdk.py  test_mp_section.py  test_mp_style.py  test_mp_table.py  test_mp_to_pdf.py  test_mp_validate.py  test_ooxml.py  test_page_layout.py  test_plan.py  test_postprocess.py  test_preset_edit_helpers.py  test_sandbox.py  (+4 more)
tools/article_experiment/: builder.py  run.py  runner.py  spec.py
(+73 files in other folders)
