[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mint-runtime"
version = "0.2.0"
description = "Model-Independent Normalization Toolkit — Claude-quality document generation for any LLM"

requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-docx>=1.1,<2",
    "pillow>=10,<11",
    "matplotlib>=3.7,<4",
]

[project.scripts]
mint = "mint.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mint", "src/mint_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mint_python"]
branch = false

[tool.coverage.report]
exclude_also = [
    # `from __future__` is a compiler directive, not runtime code.
    "^from __future__ import",
    # Explicit opt-out markers on genuinely unreachable lines.
    "pragma: no cover",
    # TYPE_CHECKING-only branches.
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-pyyaml>=6.0.12.20260408",
]
