[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mint-runtime"
version = "0.4.0a5"
description = "Model-Independent Normalization Toolkit — Claude-quality document generation for any LLM"

requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-docx>=1.1,<2",
    "pillow>=10,<11",
    "matplotlib>=3.7,<4",
    "markdown-it-py>=4.2",
]

[project.scripts]
mint = "mint.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mint", "src/mint_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mint_python"]
branch = false

[tool.coverage.report]
exclude_also = [
    # `from __future__` is a compiler directive, not runtime code.
    "^from __future__ import",
    # Explicit opt-out markers on genuinely unreachable lines.
    "pragma: no cover",
    # TYPE_CHECKING-only branches.
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

# Test files contain long OOXML literals + OOXML-derived test-name camelCase
# (delText, paraId) + intentionally uppercase fixture constants; relaxing
# specific lints in those files keeps test data readable without fragmenting
# clearly-correct constructs across many short lines or renaming OOXML attrs.
# Phase-16 W4 baseline (2026-05-11).
[tool.ruff.lint.per-file-ignores]
"tests/fixtures/_generate_edit_fixtures.py" = ["E501"]
"tests/unit/test_plan.py" = ["E501"]
"tests/unit/test_section.py" = ["E501"]
"tests/unit/test_mp_edit.py" = ["N802"]
"tests/integration/test_mp_mcp_resources.py" = ["N806"]
"tests/integration/test_mp_memo_poc.py" = ["E501", "N806", "F841"]
"tests/unit/conftest.py" = ["N814"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "types-pyyaml>=6.0.12.20260408",
]
